# CPP_labs

./: .gitignore  README.md
lab0/a/: main.cpp
lab0/a/module3/: module3.h
lab0/b/: README.md  main.cpp
lab0/b/errors/: errors.cpp  errors.h
lab0/b/reader/: reader.cpp  reader.h
lab0/b/writer/: writer.cpp  writer.h
lab1/: README.md  main.cpp
lab1/buffer/: buffer.cpp  buffer.h
lab1/test/: CMakeLists.txt  tests.cpp
lab2/: main.cpp
lab2/controller/game_controller/: game_controller.cpp  game_controller.h  i_game_controller.h
lab2/model/field/: field.cpp  field.h
lab2/model/game/: game.cpp  game.h  i_game.h
lab2/model/helper/: helper.cpp  helper.h  i_helper.h
lab2/utils/: game_params.h
lab2/utils/errors/: count_args_invalid.h  errors.cpp  file_not_found.h  invalid_argument.h
lab2/view/screen/: i_screen.h  screen.cpp  screen.h
lab3/: CMakeLists.txt  README.md  main.cpp
lab3/controller/: sound_processor.cpp  sound_processor.h
lab3/controller/exceptions/: sound_processor_exception.cpp  sound_processor_exception.h
lab3/model/converter/: converter.h  mix_converter.cpp  mute_converter.cpp  volume_converter.cpp
lab3/model/converter/exceptions/: converter_exception.cpp  converter_exception.h
lab3/model/helper/: helper.cpp  helper.h
lab3/utils/wav/: wav.h
lab3/utils/wav/exceptions/: exceptions.cpp  file_incorrect.h  file_not_open.h
lab3/utils/wav/wav_reader/: wav_reader.cpp
lab3/utils/wav/wav_writer/: wav_writer.cpp
lab3/view/: writer.h
